*Change name of MC

--- a/Slay_all.CSharp.csproj
+++ b/Slay_all.CSharp.csproj
@@ -220,7 +220,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Script\CameraController.cs" />
-    <Compile Include="Assets\Script\mc_controllder.cs" />
+    <Compile Include="Assets\Script\PlayerController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
